find by dni implememnt
